--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^4.16.2",
+    "immer": "^9.0.3",
     "next": "^10.2.3",
     "next-redux-wrapper": "^7.0.2",
     "prop-types": "^15.7.2",
