--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.0"
