--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.16.2",
     "immer": "^9.0.3",
     "next": "^10.2.3",
+    "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^7.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -20,6 +21,7 @@
     "react-slick": "^0.28.1",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
