--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^4.16.2",
+    "axios": "^0.21.1",
     "immer": "^9.0.3",
     "next": "^10.2.3",
     "next-redux-saga": "^4.1.2",
