--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "antd": "^4.16.2",
     "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
+    "eslint-config-airbnb": "^18.2.1",
     "immer": "^9.0.3",
     "next": "^10.2.3",
     "next-redux-saga": "^4.1.2",
