--- a/front/package.json
+++ b/front/package.json
@@ -25,7 +25,8 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "eslint": "^7.29.0",
