--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.16.2",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint-config-airbnb": "^18.2.1",
     "immer": "^9.0.3",
     "next": "^10.2.3",
