--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-styled-components": "^1.13.2",
     "eslint-config-airbnb": "^18.2.1",
     "immer": "^9.0.3",
+    "moment": "^2.29.1",
     "next": "^10.2.3",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^7.0.2",
